<resources>
    <string name="app_name">Poker Planning</string>
    <string name="enter_name">Please enter your name:</string>
    <string name="done">Done</string>
    <string name="create_new_room">Create new room</string>
    <string name="create">Create</string>
    <string name="room">room</string>
    <string name="join">Or enter a room:</string>
    <string name="refresh">Refresh</string>
    <string name="stop_vote">Stop vote</string>
    <string name="ok">OK</string>
    <string name="vote_results">Results of vote:</string>
    <string name="your_vote">Your vote:</string>
    <string name="roomname">Room: %1$s</string>
    <string name="owner">Created by: %1$s</string>
    <string name="note">Note: %1$d</string>
    <string name="voter">By: %1$s</string>
    <string name="voted">%1$s voted.</string>
</resources>
